# rust-axum-newrelic-example

./: Cargo.toml  README.md
src/: handler.rs  lib.rs  main.rs  opentelemetry.rs
